--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DB_USER: admin
 DB_PASSWORD: admin
-EXTRA_ARGS: 
+JWT_SECRET: # Nodeで`crypto.randomBytes(16).toString('base64')`を実行するなどしてキーを生成してください。
