--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     restart: unless-stopped
     env_file: .env
     environment:
-      DB_CLIENT: mysql
-      DB_HOST: strapiDB
-      DB_PORT: 3306
-      DB_NAME: strapi
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      EXTRA_ARGS: ${EXTRA_ARGS}
+      DATABASE_CLIENT: mysql2
+      DATABASE_HOST: strapiDB
+      DATABASE_PORT: 3306
+      DATABASE_NAME: strapi
+      DATABASE_USERNAME: ${DB_USER}
+      DATABASE_PASSWORD: ${DB_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
       NODE_ENV: production
     ports:
       - 1337:1337
@@ -26,10 +26,9 @@ services:
 
   strapiDB:
     container_name: strapiDB
-    image: mysql:5.7
+    image: mysql:latest
     restart: unless-stopped
     env_file: .env
-    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_USER: ${DB_USER}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
