--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   strapi:
     container_name: strapi
-    image: strapi
+    image: ghcr.io/holofansorchestra/strapi-docker:master
     restart: unless-stopped
     env_file: .env
     environment:
