--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       DATABASE_USERNAME: ${DB_USER}
       DATABASE_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
+      CUSTOM_COMMAND: yarn add @strapi/plugin-seo strapi-plugin-publisher strapi-plugin-sitemap strapi-plugin-cloudflare-pages && yarn build
       NODE_ENV: production
     ports:
       - 1337:1337
@@ -41,9 +42,6 @@ services:
       - strapi
     volumes:
       - ./mysql:/var/lib/mysql
-
-volumes:
-  strapi-data:
 
 networks:
   strapi:
