--- a/strapi-docker/Dockerfile
+++ b/strapi-docker/Dockerfile
@@ -4,9 +4,12 @@ RUN mkdir -p /srv/app && chown 1000:1000 -R /srv/app
 
 WORKDIR /srv/app
 
-VOLUME /srv/app
-
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod 777 /usr/local/bin/docker-entrypoint.sh && ln -s /usr/local/bin/docker-entrypoint.sh
+
+RUN yarn create strapi-app . --no-run --quickstart \
+	&& yarn install --prod \
+	&& yarn add mysql2 \
+	&& yarn build
 
 ENTRYPOINT ["docker-entrypoint.sh"]
