quickstartを使用せずにstrapiをインストールするように変更

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 DB_USER: admin
 DB_PASSWORD: admin
-JWT_SECRET: # Nodeで`crypto.randomBytes(16).toString('base64')`を実行するなどしてキーを生成してください。
+# Nodeで`crypto.randomBytes(16).toString('base64')`を実行するなどしてキーを生成してください。
+JWT_SECRET: m/M/5C8SeIVZPkPd74VLjQ==
+# 生成方法はJWT_SECRETと同じ
+ADMIN_JWT_SECRET: FMGmorO2yyVj1Anr5OrQBQ==
+# 生成方法はJWT_SECRETと同じ
+API_TOKEN_SALT: y+iXSOKksc9k7RgdRqouhg==
+# コンマ区切りで適当な長さの文字列2つ
+APP_KEYS: aFiuQaw21@$pMOsiaN90SuYI@QnoIO0%,FfOIwoiP48&Aoihnp1WIONVpuwoSFbvO
