--- a/strapi-docker/Dockerfile
+++ b/strapi-docker/Dockerfile
@@ -1,15 +1,8 @@
 FROM node:16-slim as node
 
-RUN mkdir -p /srv/app && chown 1000:1000 -R /srv/app
+RUN mkdir /srv/app && chown 1000:1000 -R /srv/app
 
-WORKDIR /srv/app
+COPY docker-entrypoint.sh /
+RUN chmod 777 /docker-entrypoint.sh
 
-COPY docker-entrypoint.sh /usr/local/bin/
-RUN chmod 777 /usr/local/bin/docker-entrypoint.sh && ln -s /usr/local/bin/docker-entrypoint.sh
-
-RUN yarn create strapi-app . --no-run --quickstart \
-	&& yarn install --prod \
-	&& yarn add mysql2 \
-	&& yarn build
-
-ENTRYPOINT ["docker-entrypoint.sh"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
